lombok + validation